<resources>
    <string name="app_name">Safe Zone</string>
    <string name="login">Iniciar Sesión</string>
    <string name="logingoole">Ingresar con Google</string>
    <string name="signup">Registrarse</string>

    <string name="hintemail">Correo electrónico</string>
    <string name="hintname">Nombre completo</string>
    <string name="hintphone">Número de teléfono</string>
    <string name="hintpass">Contraseña</string>
    <string name="hintconfirmpass">Confirme contraseña</string>
    <string name="termsconfirmation">Estoy de acuerdo con los terminos y condiciones</string>

    <string name="or">o</string>
    <string name="allfields">Por favor llene todos los campos</string>
    <string name="invalidaccount">Nombre de usuario o contraseña invalidos</string>
    <string name="title_activity_home">Map</string>
    <string name="nomatchinspwrds">No coinciden las contraseñas</string>

    <string name="boton_notificarContacto">Notificar a contacto</string>
    <string name="boton_notificarEvento">Notificar evento</string>
    <string name="boton_emergencia">Llamada de emergencia</string>

    <string name="boton_event_hurtoPersonas">Hurto a personas</string>
    <string name="boton_event_hurtoEmpresas">Hurto a empresas</string>
    <string name="boton_event_intentoHomicidio">Intento de homicidio</string>
    <string name="boton_event_homicidio">Homicidio</string>
    <string name="boton_event_secuestro">Secuestro</string>
    <string name="boton_event_extorsion">Extorsión</string>

    <string name="notify">Notificar</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="test_username">Pedro Perez</string>
    <string name="whereareu">¿A donde te diriges?</string>
    <string name="profileUpdate">Mi Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="myTrips">Mis Viajes</string>
    <string name="cargando">Cargando...</string>
    <string name="input_telefono">Número de teléfono</string>
    <string name="button_agregarContacto">Agregar Contacto</string>
    <string name="hint_buscarUsuario">Escribe el correo de un usuario registrado</string>
    <string name="completionHint_buscarUsuario">Selecciona un usuario</string>

    <string name="action_reportarEvento">Reportar evento</string>
    <string name="action_crearRuta">Crear ruta</string>

    <string name="button_here_reportEvent">Reportar evento aquí</string>
    <string name="button_here_createRoute">Viajar hacia aquí</string>
    <string name="title_activity_heat_map">Map</string>
    <string name="button_verMapaCalor">Ver mapa de calor</string>

</resources>
